deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: osa
  name: osa
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: osa
