deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: osa
  name: osa
spec:
  host: osa-summit.apps.labs.osadev.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: osa
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
